fixed scrollbars using css

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -39,9 +39,6 @@
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
 }
-h1 {
-  font-size: 3em;
-}
 body {
   margin: 0;
 }
