--- a/app/styles/homePage.css
+++ b/app/styles/homePage.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   min-height: 100vh;
+  overflow-y: hidden;
 }
 
 #editor-container {
