--- a/app/styles/listNotes.css
+++ b/app/styles/listNotes.css
@@ -1,10 +1,11 @@
 #list-notes {
   background: white;
   border-right: 1px solid black;
-  min-height: 100vh;
+  height: 100vh;
   width: 14%;
   min-width: 200px;
   padding: 0.5em;
+  overflow-y: auto;
 }
 
 #list-notes hr {
